# ipa-dumper

./: .gitignore  .gitlab-ci.yml  LICENSE.md  MANIFEST.in  README.md  dump.js  setup.cfg
ipadumper/: __main__.py  appledl.py  controller.py  dump.js  main.py  utils.py
