[metadata]
name = ipadumper
version = 0.0.4
author = marzzzello
author_email = ipa_dumper@07f.de
description = Automatically install apps on a jailbroken device iOS device and generate a decrypted ipa packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/marzzzello/ipa-dumper
project_urls =
    Bug Tracker = https://gitlab.com/marzzzello/ipa-dumper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = ipadumper
python_requires = >=3.7
include_package_data = True
install_requires =
    cachetools
    coloredlogs
    frida
    paramiko
    scp
    tqdm
    zxtouch

[options.entry_points]
console_scripts =
    ipadumper = ipadumper.main:main
